Config members emails

--- a/db/seeds/files/students.yml
+++ b/db/seeds/files/students.yml
@@ -2,10 +2,10 @@
   - name: 'User'
     email: 'user@user.com'
   - name: 'Leonardo Godoy'
-    email: 'leo@gmail.com'
+    email: 'leonardo.godoy.souza@gmail.com'
   - name: 'Luiz Otávio'
-    email: 'luiz@gmail.com'
+    email: 'luizcesa@hotmail.com'
   - name: 'Thiago Cezario'
-    email: 'thaigo@gmail.com'
+    email: 'thiagocezario2@gmail.com'
   - name: 'Marcos Henrique'
-    email: 'marcos@gmail.com'
+    email: 'marcoshbastos@gmail.com'
